--- a/FrontEnd/src/app/app.component.html
+++ b/FrontEnd/src/app/app.component.html
@@ -1,11 +1,10 @@
-<div >
-  <app-nav-bar></app-nav-bar>
+<app-nav-bar></app-nav-bar>
+<div class="container" style="margin-top: 70px;">
 
+  <!-- <app-property-list></app-property-list> -->
+  <router-outlet></router-outlet>
 
 </div>
-<div class="m-5">
 
-  <app-propertycard></app-propertycard>
-  <app-propertylist></app-propertylist>
-</div>
+
 
